# clarion-ops

./: .env.example  .gitignore  docker-compose.yml
.github/workflows/: auto-rollback.yml  ci.yml
.qwen/: settings.json
alert-service/: .gitignore  Dockerfile  pyproject.toml  requirements.txt  test_health_validator.py
alert-service/app/: __main__.py  main.py
alert-service/app/api/routers/: alerts.py  auth.py  webhooks.py
alert-service/app/core/: auth.py  config.py
alert-service/app/services/: __init__.py  health_validator.py  llm_engine.py  slack_notifier.py
dashboard-ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
dashboard-ui/src/: App.css  App.tsx  index.css  main.tsx
dashboard-ui/src/components/: AIAnalysisPanel.css  AIAnalysisPanel.tsx  ActiveIncidentsBoard.css  ActiveIncidentsBoard.tsx  Dashboard.css  Dashboard.tsx  EnvSwitcher.tsx  EnvironmentSwitcher.css  EnvironmentSwitcher.tsx  IncidentDetailView.css  IncidentDetailView.tsx  IncidentReplayView.css  IncidentReplayView.tsx  UserManagement.css  UserManagement.tsx
dashboard-ui/src/contexts/: EnvironmentContext.tsx
dashboard-ui/src/hooks/: useDeployments.ts  useEscalationPolicies.ts  useIncidents.ts  useMetrics.ts  useMetricsData.ts  (+3 more)
data-service/: Dockerfile  pyproject.toml  requirements.txt
data-service/app/: main.py
data-service/app/api/: auth.py
data-service/app/api/routers/: admin.py  analytics.py  deployments.py  escalations.py  incidents.py  security.py
data-service/app/core/: config.py
data-service/app/db/: session.py
data-service/app/models/: ai_analysis.py  cves.py  deployments.py  escalations.py  incident_logs.py  incidents.py  metrics.py
data-service/app/tasks/: snapshot_worker.py
data-service/sql/: init_ai_analysis.sql  init_cve_scans.sql  init_deployments.sql  init_escalation_policies.sql  init_incident_logs.sql  init_incidents.sql  init_metrics.sql  risk_audit_migration.sql  seed_ai_analysis.sql
deployment-service/: Dockerfile  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
deployment-service/src/: index.ts
metrics-service/: Dockerfile  alert_rules.yml  alertmanager.yml  docker-compose.test.yml  prometheus.yml  pyproject.toml
metrics-service/app/: config.py  main.py
metrics-service/app/api/routers/: logs.py  metrics.py
metrics-service/app/models/: enums.py  schemas.py
metrics-service/app/services/: kubernetes_client.py  prometheus_client.py  resource_metrics.py
metrics-service/tests/: mock_metrics_exporter.py
(+27 files in other folders)
