[project]
name = "metrics-service"
version = "0.1.0"
description = "CLARION OPS metrics gateway — FastAPI service querying Prometheus for real-time and historical metrics"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiohttp>=3.10.0",
    "prometheus-client>=0.21.0",
    "httpx>=0.27.0",
    "kubernetes>=29.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "aioresponses>=0.7.0",
    "mypy>=1.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
